--- a/style.css
+++ b/style.css
@@ -1,32 +1,161 @@
-.video{
-    width: 100%;
-    position: absolute;
-    z-index: -1;
-}
-.topBar{
-    margin: auto;
-    text-align: center;
-    padding-top: 20px;
-}
-.topRightBar{
-    position: fixed;
-    right: 2%;
-    top: 20px;
-    color: antiquewhite;
-}
-.currentBar{
-    text-align: center;
-    margin: auto;
-    margin-top: 10px;
-    border-radius: 10px;
-    width: 95%;
-    background-color: rgba(216, 222, 228, 0.915);
-}
-#lo_name{
-    font-weight: bold;
-}
-.tbleka{
-    margin: auto;
-    outline: black solid;
+:root {
+    --backgroud-color: #1B858F;
+    --body-color: #22A6B3;
+    --card-l-color: #38AFBB;
+    --card-m-color: #1F95A1;
+    --card-h-color: #14646B;
+    --font-color-dark: #2c3e50;
 }
 
+body {
+    background-color: var(--backgroud-color);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+/*======================*\
+    nav bar
+\*======================*/
+nav {
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    text-align: left;
+}
+.nav_input{
+    padding: 5px;
+    background-color: rgba(27, 133, 143 ,0.001);
+}
+#txtInput{
+    background-color: #14646B; 
+    color: #d2dada;  
+    font-weight: bold; border: none ; 
+    border-radius: 5px ; 
+    height: 25px; 
+    width: 250px;
+}
+#btnInput:hover{
+    background-color: #39a4eb; 
+}
+#txtInput:hover{
+    background-color:  #0e464b; 
+}
+#btnInput{
+    background-color: #2980b9;     
+    color: #d2dada; 
+    font-weight: bold; 
+    border: none ; 
+    border-radius: 5px ; 
+    height: 25px;
+}
+div {
+    background-color: var(--body-color);
+    border-radius: 8px;
+    box-shadow: 10px 10px 50px var(--font-color-dark);
+}
+
+/*======================*\
+    Welcome
+\*======================*/
+
+.welcome_box {
+    width: 100%;
+    height: 70px;
+}
+
+#Welcome_lbl {
+    position: relative;
+    left: 10px;
+    top: -10px;
+    font-size: 25px;
+    font-weight: bold;
+    color: var(--font-color-dark)
+}
+
+#Welcome_time {
+    position: relative;
+    text-align: right;
+    top: -85px;
+    right: 15px;
+    color: var(--font-color-dark);
+}
+
+
+/* back ground animation*/
+@import url("https://fonts.googleapis.com/css?family=Montserrat:700");
+
+.hero {
+    position: absolute;
+    height: 100vh;
+    z-index: -1;
+}
+
+.cube {
+    position: absolute;
+    top: 80vh;
+    left: 45vw;
+    width: 20px;
+    height: 20px;
+    border: solid 0px var(--backgroud-color);
+    transform-origin: top left;
+    transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    -webkit-animation: cube 12s ease-in forwards infinite;
+    animation: cube 12s ease-in forwards infinite;
+}
+
+.cube:nth-child(2) {
+    -webkit-animation-delay: 2s;
+    animation-delay: 2s;
+    left: 25vw;
+    top: 40vh;
+}
+
+.cube:nth-child(3) {
+    -webkit-animation-delay: 4s;
+    animation-delay: 4s;
+    left: 75vw;
+    top: 50vh;
+}
+
+.cube:nth-child(4) {
+    -webkit-animation-delay: 6s;
+    animation-delay: 6s;
+    left: 90vw;
+    top: 10vh;
+}
+
+.cube:nth-child(5) {
+    -webkit-animation-delay: 8s;
+    animation-delay: 8s;
+    left: 10vw;
+    top: 85vh;
+}
+
+.cube:nth-child(6) {
+    -webkit-animation-delay: 10s;
+    animation-delay: 10s;
+    left: 50vw;
+    top: 10vh;
+}
+
+@-webkit-keyframes cube {
+    from {
+        transform: scale(0) rotate(0deg) translate(-50%, -50%);
+        opacity: 1;
+    }
+
+    to {
+        transform: scale(20) rotate(960deg) translate(-50%, -50%);
+        opacity: 0;
+    }
+}
+
+@keyframes cube {
+    from {
+        transform: scale(0) rotate(0deg) translate(-50%, -50%);
+        opacity: 1;
+    }
+
+    to {
+        transform: scale(20) rotate(960deg) translate(-50%, -50%);
+        opacity: 0;
+    }
+}
