--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     --card-m-color: #1F95A1;
     --card-h-color: #14646B;
     --font-color-dark: #2c3e50;
+    --font-color-light:#dee2e6;
 }
 
 body {
@@ -37,6 +38,23 @@ nav {
     border-radius: 5px ; 
     height: 25px; 
     width: 250px;
+}
+.suggess{
+    position: absolute;
+    list-style: none;
+    top: 60px;
+    margin: auto;
+    padding-right: 30px;
+    background-color:hsla(185, 54%, 48%,.8);
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    color: var(--font-color-dark);
+    z-index: 1;
+    font-weight: bold;
+}
+.suggess :hover{
+    background-color:hsla(185, 74%, 59%, 0.8);
+    cursor: pointer;
 }
 #btnInput:hover{
     background-color: #39a4eb; 
@@ -81,7 +99,7 @@ nav {
     height: 70px;
 }
 
-#Welcome_lbl {
+.Welcome_lbl {
     position: relative;
     left: 10px;
     top: -10px;
@@ -100,7 +118,30 @@ nav {
 /*======================*\
     live weater
 \*======================*/
+#weather_tbl,th,td{
+    border: 1px solid;
+}
+#weather_tbl{
+    color: var(--font-color-dark);
+    margin: auto;
+    margin-top: 15px;
+    width: 95%;
+    border-collapse: collapse;
+}
+#txt_weather_condition{
+    color: var(--font-color-light);
+    font-size: 32px;
+    font-weight: bold;
+    position: relative;
+    left: 20px;
+    top: 8px;
 
+}
+#img_weather_condition{
+    position: relative;
+    left: 10px;
+    width: 100px;
+}
 .live_box{
     margin: auto;
     margin-top: 10px;
@@ -123,7 +164,7 @@ nav {
     box-shadow: 1px 1px 50px var(--font-color-dark);
     min-width: 400px;
     width: 50%; 
-    height: 400px;
+    height: 450px;
 }
 .day_box{
     margin: auto;
@@ -136,8 +177,8 @@ nav {
 .day{
     border-radius: 6px;
     margin: 2px;
-    width: 100px;
-    height: 70px;
+    width: 110px;
+    height: 100px;
 }
 
 /*======================*\
